--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/images/book.png" rel="icon">
+  <link href="./assets/images/book.png" rel="icon">
 
   <!-- Google Fonts -->
   <link
